Don't use admin context within connected system(#64)
* Use CSP config for upload user context
* Configure Folder Upload location in Connected System
* Removes unnecessary log4j jar
* Remove unrelated comment
* Updated example app to use connected system

Co-authored-by: James Carter <james.carter@appian.com>